syntax = "proto3";

package gtfs_realtime_api;

option go_package = "github.com/kantacky/gtfs-realtime-api/server";

import "google/protobuf/timestamp.proto";

service GTFSRealtimeService {
    rpc ListVehiclePositions(ListVehiclePositionsRequest) returns (ListVehiclePositionsResponse) {}
}

message ListVehiclePositionsRequest {
    // Agency ID (UUID)
    string agency_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    int64 buffer_seconds = 3;
}

message ListVehiclePositionsResponse {
    // Agency ID (UUID)
    string agency_id = 1;
    repeated VehiclePosition vehicle_positions = 2;
}

message VehiclePosition {
    // ID (UUID)
    string id = 1;
    optional string trip_id = 2;
    optional string route_id = 3;
    optional int32 direction_id = 4;
    optional google.protobuf.Timestamp start_datetime = 5;
    optional string schedule_relationship = 6;
    optional string vehicle_id = 7;
    optional string vehicle_label = 8;
    optional Coordinate vehicle_position = 9;
    optional int32 current_stop_sequence = 10;
    optional string stop_id = 11;
    optional google.protobuf.Timestamp timestamp = 12;
}

message Coordinate {
    float latitude = 1;
    float longitude = 2;
}
